Real-BackEnd/src/main/java/com/example/BeFETest/Error/EnumModel.java
package com.example.BeFETest.Error;

public interface EnumModel {


    String getKey();
    String getValue();
}
